--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Django==1.7
 South==1.0
 argparse==1.2.1
 dj-database-url==0.3.0
+django-cors-headers==0.13
 djangorestframework==2.4.2
 gunicorn==19.1.1
 psycopg2==2.5.4
+wsgiref==0.1.2
